<resources>
    <string name="app_name">Fragment Hitung Bidang</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lingkaran">Lingkaran</string>
    <string name="persegi_panjang">Persegi Panjang</string>
    <string name="segitiga">Segitiga</string>
    <string name="jari_jari">Jari-jari</string>
    <string name="hitung">Hitung</string>
    <string name="panjang">Panjang</string>
    <string name="alas">Alas</string>
    <string name="tinggi">Tinggi</string>
</resources>